docs/archive/2025-10-oclif-invalid-regex-debug/evidence/prod-string-width-repro.txt
node -e "import('file:///usr/local/lib/node_modules/@mittwald/cli/dist/commands/conversation/categories.js')"
---
file:///usr/local/lib/node_modules/@mittwald/cli/node_modules/string-width/index.js:16
const zeroWidthClusterRegex = /^(?:\p{Default_Ignorable_Code_Point}|\p{Control}|\p{Mark}|\p{Surrogate})+$/v;
                              ^

SyntaxError: Invalid regular expression flags
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)

(Node.js v18.20.8)
